--- a/data/code/dataset_generation.ipynb
+++ b/data/code/dataset_generation.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "dc4faba6-ca16-4644-8621-e1b00fee7c9a",
    "metadata": {},
    "outputs": [
@@ -706,11 +706,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "id": "241860ad-7671-4562-a30f-e949f056fefb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "117.34983\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[\"military_expenditure_by_gdp\"].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "73c47216-7d70-4884-9200-9b025c76d53e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              conflict_type  mean_deaths\n",
+      "0  nonstate_conflict_deaths   664.081882\n",
+      "1  onesided_conflict_deaths  1612.351093\n",
+      "2     state_conflict_deaths  2173.236398\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 1. Excluir Ruanda 1994\n",
+    "df_filtered = df[\n",
+    "    ~((df[\"Entity\"] == \"Rwanda\") & (df[\"Year\"] == 1994))\n",
+    "].copy()\n",
+    "\n",
+    "# 2. Mantener solo filas con al menos una muerte registrada\n",
+    "df_filtered = df_filtered[\n",
+    "    (df_filtered[\"state_conflict_deaths\"] > 0) |\n",
+    "    (df_filtered[\"nonstate_conflict_deaths\"] > 0) |\n",
+    "    (df_filtered[\"onesided_conflict_deaths\"] > 0)\n",
+    "]\n",
+    "\n",
+    "# 3. Reestructurar a formato largo: tipo de conflicto → muertes\n",
+    "df_long = df_filtered.melt(\n",
+    "    id_vars=[\"Entity\", \"Year\"],\n",
+    "    value_vars=[\n",
+    "        \"state_conflict_deaths\",\n",
+    "        \"nonstate_conflict_deaths\",\n",
+    "        \"onesided_conflict_deaths\"\n",
+    "    ],\n",
+    "    var_name=\"conflict_type\",\n",
+    "    value_name=\"deaths\"\n",
+    ")\n",
+    "\n",
+    "# 4. Eliminar ceros y nulos\n",
+    "df_long = df_long[df_long[\"deaths\"] > 0]\n",
+    "\n",
+    "# 5. Calcular la media de muertes por tipo de conflicto\n",
+    "mean_deaths_by_type = (\n",
+    "    df_long\n",
+    "    .groupby(\"conflict_type\", as_index=False)[\"deaths\"]\n",
+    "    .mean()\n",
+    "    .rename(columns={\"deaths\": \"mean_deaths\"})\n",
+    ")\n",
+    "\n",
+    "print(mean_deaths_by_type)\n"
+   ]
   }
  ],
  "metadata": {
